fix z-index

--- a/Settimana 02/Esercizio02/assets/css/stile.css
+++ b/Settimana 02/Esercizio02/assets/css/stile.css
@@ -196,6 +196,7 @@ header {
     position: sticky;
     position: -webkit-sticky;
     top:0;
+    z-index: 1;
 }
 
 section > h2 {
